# pgagent

./: .gitignore  README.md  pyproject.toml
agent/: cli.py  context.py  llm_agent.py  registry.py
agent/tools/: __init__.py  code_lookup.py  file_ops.py  get_patch.py  list_dir.py  pg_manager.py  query_exec.py  search_code.py
pg_debugger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prompts/: 0.txt
src/: llm.py  main.py
tests/: conftest.py  test_file_ops.py  test_lookup_code_reference.py  test_pg_manager.py  test_query_exec.py  test_registry.py
